force-app/main/default/objects/EV_TraduccionDeEvento__c/EV_TraduccionDeEvento__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar las traducciones a los distintos idiomas del un evento.</description>
    <label>Traducción de evento</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Traducción Evento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Traducciones de evento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>