force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_Agenda__c.field-meta.xml
<CustomField>
    <fullName>EV_Agenda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Este campo se tiene que rellenar con el siguiente formato: Hora, descripción; Hora, descripción; Hora, descripción</inlineHelpText>
    <label>Agenda</label>
    <type>TextArea</type>
</CustomField>