force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_AntetituloCategoria__c.field-meta.xml
<CustomField>
    <fullName>EV_AntetituloCategoria__c</fullName>
    <description>Antetítulo de categoría expuesto para las creatividades</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Aparece en las invitaciones.</inlineHelpText>
    <label>Antetítulo de categoría</label>
    <length>255</length>
    <type>Text</type>
</CustomField>