force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_BancaPrivada__c.field-meta.xml
<CustomField>
    <fullName>EV_BancaPrivada__c</fullName>
    <description>Campo utilizado para eventos de tipo Festivales y otras experiencias</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto específico Banca Privada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>