force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_Claim__c.field-meta.xml
<CustomField>
    <fullName>EV_Claim__c</fullName>
    <description>Campo que recoge una descripción corta para el carrusel de portal</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Debe tener entre 140 y 160 caracteres. Las frases deben estar acabadas.</inlineHelpText>
    <label>Claim Portal</label>
    <length>160</length>
    <type>Text</type>
</CustomField>