force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_CodigoBancaNegocios__c.field-meta.xml
<CustomField>
    <fullName>EV_CodigoBancaNegocios__c</fullName>
    <description>Campo codigo utilizado para eventos de tipo Festivales y otras experiencias</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Banca Negocios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>