force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_CodigoBancaRetail__c.field-meta.xml
<CustomField>
    <fullName>EV_CodigoBancaRetail__c</fullName>
    <description>Campo codigo utilizado para eventos de tipo Festivales y otras experiencias</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Si los campos para alguno de los segmentos fuesen vacios, se pintará el de Retail para el resto de clientes.</inlineHelpText>
    <label>Código Banca Retail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>