force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_CTA2__c.field-meta.xml
<CustomField>
    <fullName>EV_CTA2__c</fullName>
    <description>Texto que aparece en el segundo botón. Newsletter volver ver el evento.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Texto que aparece en el segundo botón. Newsletter volver ver el evento.</inlineHelpText>
    <label>Titulo del CTA2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>