force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>EV_Descripcion__c</fullName>
    <description>Descripcion de evento traducida.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Descripción que aparecerá en portal.</inlineHelpText>
    <label>Descripción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>