force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_DescripcionVideoTeaser__c.field-meta.xml
<CustomField>
    <fullName>EV_DescripcionVideoTeaser__c</fullName>
    <description>Descripción del vídeo que irá incluido en las templates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción del vídeo teaser</label>
    <type>TextArea</type>
</CustomField>