force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_Evento__c.field-meta.xml
<CustomField>
    <fullName>EV_Evento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación directa a evento para registrar una traducción de sus distintos campos</description>
    <label>Evento</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Idiomas_de_Eventos</relationshipName>
    <type>Lookup</type>
</CustomField>