force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_Idioma__c.field-meta.xml
<CustomField>
    <fullName>EV_Idioma__c</fullName>
    <description>Idioma del registro al que se traducirán todos los campos</description>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AV_IdiomasGlobal</valueSetName>
    </valueSet>
</CustomField>