force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_ImagenCabecera__c.field-meta.xml
<CustomField>
    <fullName>EV_ImagenCabecera__c</fullName>
    <description>Imagen cabecera personalizada para las creatividades.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Logo sobre la imagen de invitación</inlineHelpText>
    <label>URL logo cabecera</label>
    <type>Url</type>
</CustomField>