force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_IntroductionCTA2__c.field-meta.xml
<CustomField>
    <fullName>EV_IntroductionCTA2__c</fullName>
    <description>Texto descriptivo de la información a la que dirige el segundo botón. Newsletter volver ver el evento.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Texto descriptivo de la información a la que dirige el segundo botón. Newsletter volver ver el evento.</inlineHelpText>
    <label>Introducción del CTA2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>