force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_OrigenCampaign__c.field-meta.xml
<CustomField>
    <fullName>EV_OrigenCampaign__c</fullName>
    <description>Campo origen de la campaña</description>
    <formula>TEXT(EV_Evento__r.EV_Origen__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen campaign</label>
    <type>Text</type>
</CustomField>