force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_PortalCaixaBankTalks__c.field-meta.xml
<CustomField>
    <fullName>EV_PortalCaixaBankTalks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal CaixaBank Talks</label>
    <referenceTo>EV_PortalCaixaBankTalks__c</referenceTo>
    <relationshipLabel>Traducciones de evento</relationshipLabel>
    <relationshipName>Traducciones_de_evento</relationshipName>
    <type>Lookup</type>
</CustomField>