force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_SinopsisInvitacion__c.field-meta.xml
<CustomField>
    <fullName>EV_SinopsisInvitacion__c</fullName>
    <description>Sinopsis de invitación traducida</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sinopsis invitación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>