force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_TextoBoton__c.field-meta.xml
<CustomField>
    <fullName>EV_TextoBoton__c</fullName>
    <description>Texto del botón de inscripción en portal</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Botón de inscribirse(Texto fijo).</inlineHelpText>
    <label>Texto del botón</label>
    <length>255</length>
    <type>Text</type>
</CustomField>