force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_TextoCTANL__c.field-meta.xml
<CustomField>
    <fullName>EV_TextoCTANL__c</fullName>
    <description>Campo para la CTA de la newsletter</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto CTA NL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>