force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_TextoDebajoBoton__c.field-meta.xml
<CustomField>
    <fullName>EV_TextoDebajoBoton__c</fullName>
    <description>Texto situado debajo del botón de inscripción en portal</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Texto fijo.</inlineHelpText>
    <label>Texto debajo botón</label>
    <length>255</length>
    <type>Text</type>
</CustomField>