force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_TextoDescriptivoBoton__c.field-meta.xml
<CustomField>
    <fullName>EV_TextoDescriptivoBoton__c</fullName>
    <description>Texto descriptivo del botón portal al pasar por encima</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Texto al dejar el puntero encima del botón de inscribirse(Texto fijo).</inlineHelpText>
    <label>Texto descriptivo botón</label>
    <length>255</length>
    <type>Text</type>
</CustomField>