force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_TextoLegal__c.field-meta.xml
<CustomField>
    <fullName>EV_TextoLegal__c</fullName>
    <description>Campo utilizado para eventos de tipo Festivales y otras experiencias.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto legal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>