force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_TextoOnClick__c.field-meta.xml
<CustomField>
    <fullName>EV_TextoOnClick__c</fullName>
    <description>Texto onclick del botón de inscripción portal</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Texto al pulsar el botón de inscribirse(Texto fijo).</inlineHelpText>
    <label>Texto onClick</label>
    <length>255</length>
    <type>Text</type>
</CustomField>