force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_TextoPersonalizadoRecordatorio__c.field-meta.xml
<CustomField>
    <fullName>EV_TextoPersonalizadoRecordatorio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Aplica únicamente al programa de evento &apos;Eventos Comunicaciones personalizadas&apos;. Si se rellena este campo, no aparece QR en dicha comunicación.</inlineHelpText>
    <label>Texto personalizado recordatorio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>