force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_TituloVideoTeaser__c.field-meta.xml
<CustomField>
    <fullName>EV_TituloVideoTeaser__c</fullName>
    <description>Título del vídeo que irá incluido en las templates</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Título del vídeo teaser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>