force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_UrlCTA2__c.field-meta.xml
<CustomField>
    <fullName>EV_UrlCTA2__c</fullName>
    <description>URL del segundo botón. Newsletter volver ver el evento.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL del segundo botón. Newsletter volver ver el evento.</inlineHelpText>
    <label>URL CTA2</label>
    <type>Url</type>
</CustomField>