force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLCTALanding__c.field-meta.xml
<CustomField>
    <fullName>EV_URLCTALanding__c</fullName>
    <description>Campo utilizado para la url del cta de la landing en eventos Festivales y otras experiencias</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL CTA Landing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>