force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLDeImagen__c.field-meta.xml
<CustomField>
    <fullName>EV_URLDeImagen__c</fullName>
    <description>Imagen formulario Portal. Tamaño imagen (408x260)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Imagen formulario Portal (408x260px)</inlineHelpText>
    <label>URL Imagen Formulario</label>
    <type>Url</type>
</CustomField>