force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLEventVideo__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEventVideo__c</fullName>
    <description>Url del video del evento para newsletter volver ver el evento.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Url del video del evento para newsletter volver ver el evento.</inlineHelpText>
    <label>URL video del evento</label>
    <type>Url</type>
</CustomField>