force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLImagenCarrusel__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenCarrusel__c</fullName>
    <description>Carrusel Próximos eventos del Portal. Tamaño imagen (454x196)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Carrusel &quot;Próximos eventos&quot; del Portal (454x196px)</inlineHelpText>
    <label>URL Imagen Próximos Eventos</label>
    <type>Url</type>
</CustomField>