force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLImagenEsperaStreaming__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenEsperaStreaming__c</fullName>
    <description>Banner de espera evento virtual. Tamaño imagen (1920x1080)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Banner de espera evento virtual (1920x1080px)</inlineHelpText>
    <label>URL Imagen de Espera Streaming</label>
    <type>Url</type>
</CustomField>