force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLImagenGrande__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenGrande__c</fullName>
    <description>Imagen catálogo destacado NOW. Tamaño imagen (800x450)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Imagen catálogo destacado NOW (800x450px)</inlineHelpText>
    <label>URL Imagen Destacado NOW</label>
    <type>Url</type>
</CustomField>