force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLImagenInvitacion__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenInvitacion__c</fullName>
    <description>Imagen de invitación y &quot;En directo&quot; de NOW. Tamaño imagen (640x371). La imagen a portal llega desde Brightcove - portal no la coge del servicio.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Imagen de invitación y &quot;En directo&quot; de NOW (640x371px)</inlineHelpText>
    <label>URL Imagen Invitación</label>
    <type>Url</type>
</CustomField>