force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLImagenMedia__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenMedia__c</fullName>
    <description>Imagen catálogo normal NOW. Tamaño imagen (515x225)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Imagen catálogo normal NOW (515x225px)</inlineHelpText>
    <label>URL Imagen Catálogo NOW</label>
    <type>Url</type>
</CustomField>