force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLImagenMovil__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenMovil__c</fullName>
    <description>Página de detalle del Portal. Tamaño imagen (739x418)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Página de detalle del Portal (739x418px)</inlineHelpText>
    <label>URL Imagen Detalle Portal</label>
    <type>Url</type>
</CustomField>