force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLImagenOriginal__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenOriginal__c</fullName>
    <description>Slider evento principal del Portal. Tamaño imagen (1920x578)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Slider evento principal del Portal (1117x336px)</inlineHelpText>
    <label>URL Imagen Destacado</label>
    <type>Url</type>
</CustomField>