force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLImagenPequena__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenPequena__c</fullName>
    <description>Carruseles inferiores del Portal, calendario (tanto listado como elemento flotante) y resultados de buscador. Tamaño imagen (265x149)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Carruseles inferiores del Portal, calendario y resultados de buscador (265x149px)</inlineHelpText>
    <label>URL Imagen Pequeña</label>
    <type>Url</type>
</CustomField>