force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLLogoPie__c.field-meta.xml
<CustomField>
    <fullName>EV_URLLogoPie__c</fullName>
    <description>Imagen que se muestra en Logo 3 de las creatividades si se selecciona Otros en el campo Logo pie de Campaña</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL logo pie</label>
    <type>Url</type>
</CustomField>