force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLNegocioPromotor__c.field-meta.xml
<CustomField>
    <fullName>EV_URLNegocioPromotor__c</fullName>
    <description>Imagen que se muestra en Logo 2 de las creatividades si se selecciona Otros en el campo Negocio Promotor de Campaña</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL negocio promotor</label>
    <type>Url</type>
</CustomField>