force-app/main/default/objects/EV_TraduccionDeEvento__c/fields/EV_URLVideoTeaser__c.field-meta.xml
<CustomField>
    <fullName>EV_URLVideoTeaser__c</fullName>
    <description>campo que contendrá el vídeo teaser del evento.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL vídeo teaser</label>
    <type>Url</type>
</CustomField>