force-app/main/default/objects/EV_TraduccionDeEvento__c/recordTypes/EV_TraduccionEvento.recordType-meta.xml
<RecordType>
    <fullName>EV_TraduccionEvento</fullName>
    <active>true</active>
    <label>EV_TraduccionEvento</label>
</RecordType>