force-app/main/default/objects/EV_TraduccionDeEvento__c/validationRules/EV_checkURLVideo.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_checkURLVideo</fullName>
    <active>false</active>
    <description>Comprove if it have url and image video</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(EV_Evento__r.EV_URLImagenVideo__c)),
EV_URLVideoTeaser__c = null,
$Profile.Name = &quot;EV_Eventos&quot;
)</errorConditionFormula>
    <errorMessage>No es posible informar este campo no tiene una URL</errorMessage>
</ValidationRule>