force-app/main/default/objects/EV_TraduccionDeEvento__c/validationRules/EV_NotChangeCreateIfNotOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_NotChangeCreateIfNotOwner</fullName>
    <active>true</active>
    <description>Validacion creada para no poder modificar o crear traducciones de las que la campaña dependiente no sea propietario.</description>
    <errorConditionFormula>AND(
OR(AND(ISNEW(), EV_Evento__r.OwnerId != $User.Id),
AND( PRIORVALUE(LastModifiedDate) != NOW() ,
EV_Evento__r.OwnerId != $User.Id)),
$Permission.EV_NotCreateEditTraduccionesIfNotOwner,
NOT(
AND(
$Permission.EV_AltaMasivaEventos,
$Permission.EV_NotCreateEditTraduccionesIfNotOwner
)
),
AND(!$Permission.CBK_BypassValidationRules,
!$Permission.EV_ByPassValidationRules))</errorConditionFormula>
    <errorMessage>No puedes crear o modificar traducciones de las que no eres propietario de la campaña.</errorMessage>
</ValidationRule>