force-app/main/default/objects/EV_TraduccionDeEvento__c/validationRules/EV_ValidarDescription.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_ValidarDescription</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(EV_Descripcion__c ) &lt; 250 ||  LEN(EV_Descripcion__c ) &gt; 496</errorConditionFormula>
    <errorDisplayField>EV_Descripcion__c</errorDisplayField>
    <errorMessage>Caracteres 250 mínimos y 496 máximos</errorMessage>
</ValidationRule>