force-app/main/default/objects/EV_TraduccionDeEvento__c/validationRules/EV_ValidarNegocioPromotor.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_ValidarNegocioPromotor</fullName>
    <active>true</active>
    <description>Validamos si en el campo Negocio promotor figura &apos;Otros&apos; para tener que rellenar el campo de URL Negocio Promotor</description>
    <errorConditionFormula>AND(EV_URLNegocioPromotor__c = null, ISPICKVAL(EV_Evento__r.EV_NegocioPromotor__c, &apos;009&apos;))</errorConditionFormula>
    <errorDisplayField>EV_URLNegocioPromotor__c</errorDisplayField>
    <errorMessage>Debe rellenar el campo URL Negocio Promotor</errorMessage>
</ValidationRule>